--- a/.github/workflows/access_token_generate.yaml
+++ b/.github/workflows/access_token_generate.yaml
@@ -12,12 +12,12 @@ on:
 
 jobs:
   generate:
-    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-generation.yaml@v13 # Import the sdk generation workflow which will handle the generation of the SDKs and publishing to the package managers in 'direct' mode.
+    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-generation.yaml@v14 # Import the sdk generation workflow which will handle the generation of the SDKs and publishing to the package managers in 'direct' mode.
     with:
       speakeasy_version: latest
       openapi_doc_location: https://docs.api.epilot.io/access-token.yaml
       languages: |-
-        - go: ./access_token
+        - python: ./access_token
       create_release: true
       mode: pr
       force: ${{ github.event.inputs.force }}
